# DPUmesh

./: .env.example  .gitignore  Makefile  README.md  api.md  test-bench.sh
bench/: BENCH.md  Dockerfile.bench_tcp  Dockerfile.echo_dpumesh  Dockerfile.echo_tcp  README.md  RESULT.md  bench.h  bench.sh  bench_dpumesh.c  bench_sock.c  bench_tcp.go  echo_dpumesh.c  echo_sock.c  echo_tcp.go  loopback_sock.c  preload_runner.c  scale_log.md  stream_sock.c
bench/apps/: bench.h  bench_dpumesh.c  bench_sock.c  echo_dpumesh.c  echo_sock.c
bench/docker/: bench_dpumesh.Dockerfile  bench_sock.Dockerfile  echo_dpumesh.Dockerfile  echo_sock.Dockerfile
bench/k8s/: pods.yaml  registry
bench/mrbench/: build.sh  countbw.csv  dma_mrbench.c  mrbench.csv  run.sh  run_countbw.sh
bench/report/: BUFFER.md  DEPLOY.md  REPORT.md
bench/report/data/: batch_ablation.csv  batch_cpu.csv  busy.csv  configs.txt  cpu.csv  cpu_configs.csv  cpu_summary.csv  dma_ring_2026-07-24.csv  dpu_startup.txt  idle.txt  meta.txt  npod.csv  rtc_scaling_2026-07-24.csv  summary.csv  tidy.csv
bench/suite/: STAGES.md  analyze.py  analyze_cpu.py  batch_ablation.sh  batch_cpu.sh  cpu_probe.sh  current_l4.sh  fair_cores.sh  npod.sh  plot.py  plot_batch.py  plot_meeting.py  plot_size_comparison.py  run_suite.sh  validate_l4.py
bench/validators/: README.md  loopback_dpumesh.Dockerfile  loopback_dpumesh.c  preload_dpumesh.Dockerfile  preload_runner.c  preload_sock.Dockerfile  stream_dpumesh.Dockerfile  stream_dpumesh.c  tcp_client.c  tcp_echo.c  verbs_dpumesh.Dockerfile  verbs_dpumesh.c
design/: API.md  CORE.md  NAMING.md
doca/: buffer.c  buffer.h  build_dpacc.sh  comch_client.c  comch_client.h  comch_common.c  comch_common.h  comch_consumer.c  comch_consumer.h  comch_msgq.c  comch_msgq.h  comch_server.c  comch_server.h  common.c  common.h  config.c  config.h  dpa.c  dpa.h  dpa_common.h  dpa_resource_config.yaml  dpu_l7.c  dpu_l7.h  dpu_main.c  dpu_proxy.c  dpu_proxy.h  dpu_worker.c  dpu_worker.h  meson.build  object.c  object.h  ring.c  ring.h
doca/device/: dpa_kernel.c
include/dpumesh/: dmesh.h  dmesh_common.h  dmesh_core.h  dmesh_topology.h  dpm.h  dpumesh.h  dpumesh_common.h
integrations/grpc/: CMakeLists.txt  README.md
integrations/grpc/bench/: qps_benchmark.cc
integrations/grpc/include/dpumesh/grpc/: version.h
integrations/grpc/src/: dmesh_api_ops.cc  dmesh_api_ops.h  dmesh_endpoint.cc  dmesh_endpoint.h  dmesh_grpc_channel.cc  dmesh_grpc_channel.h  dmesh_grpc_runtime.cc  dmesh_grpc_runtime.h  dmesh_reactor.cc  dmesh_reactor.h  dmesh_runtime.cc  dmesh_runtime.h  endpoint_transport.h  executor.h
integrations/grpc/tests/: endpoint_test.cc  fake_dmesh_ops.cc  fake_dmesh_ops.h  fake_endpoint_transport.cc  fake_endpoint_transport.h  grpc_channel_test.cc  native_api_link_test.cc  native_grpc_smoke.cc  native_runtime_smoke.cc  reactor_test.cc
plan/: gRPC.md
src/: dmesh.c  dmesh_api.c  dmesh_core.c  dmesh_core.h  dmesh_preload.c  dmesh_resolve.c  dpm.c  dpumesh_doca.c
tests/: README.md  abi_contract_test.sh  ingest_mpsc_queue_test.c  l4_pin_policy_test.c  lb_policy_test.c  native_api_contract_test.c  native_control_state_test.c  native_tx_batch_policy_test.c  native_writable_test.c  preload_api_contract_test.c  proxy_lane_queue_test.c  ring_counter_test.c  topology_test.c  worker_mpsc_queue_test.c
